.golden/-559153311506421916/golden

INITIALPATH:7:20: error:
    • INITIALPATH:7:31:
  |
7 | main = putStrLn [f|{hello:=100s}|]
  |                               ^
String type is incompatible with inside padding (=).

    • In the quasi-quotation: [f|{hello:=100s}|]
  |
7 | main = putStrLn [f|{hello:=100s}|]
  |                    ^^^^^^^^^^^^^^^
